# rayge

./: .gitmodules  CMakeLists.txt
.github/workflows/: CI.yaml  Testing.yaml  Testing.yml
cmake/: export_header_template.in  generate_export_header_template.cmake  rayge_definitions.cmake  rayge_install.cmake  rayge_utilities.cmake
cmake/toolchains/: zig-c++.cmd  zig-toolchain-powerpc-linux-musl.cmake
docs/: architecture.md  architecture.txt  thoughts-on-zig.md
engine/: CMakeLists.txt
engine/include/RayGE/: Angles.h  Color.h  Engine.h  InterfaceUtils.h  Logging.h  Math.h  Platform.h  ResourceHandle.h  SceneTypes.h
engine/include/RayGE/APIs/: Engine.h  Game.h  Logging.h  Renderable.h  Resources.h  Scene.h
engine/include/RayGE/Private/: CurrentEngineAPI.h  InterfaceUtils.h  Launcher.h
engine/src/: Conversions.h  Debugging.c  Debugging.h  EngineAPI.c  EngineAPI.h  GameLoader.c  GameLoader.h  Headless.h  Launcher.c  Testing.h  Utils.h
engine/src/BehaviouralSubsystems/: BSysManager.c  BSysManager.h  Readme.md  RenderableBSys.c  RenderableBSys.h  SpatialBSys.c  SpatialBSys.h
engine/src/BinaryResources/: DMMono_Regular.c  DMMono_Regular.h  OpenSans_Medium.c  OpenSans_Medium.h
engine/src/Commands/: CommandParser.c  CommandParser.h  InputCommands.h
engine/src/Engine/: Engine.c  Engine.h  EngineAPI.c  EngineAPI.h
engine/src/EngineSubsystems/: CommandSubsystem.c  CommandSubsystem.h  EngineSubsystemManager.c  EngineSubsystemManager.h  FilesystemSubsystem.c  FilesystemSubsystem.h  InputHookSubsystem.c  InputHookSubsystem.h  InputSubsystem.c  InputSubsystem.h  Readme.md  RendererSubsystem.c  RendererSubsystem.h  ResourceSubsystem.c  ResourceSubsystem.h  SceneSubsystem.c  SceneSubsystem.h  UISubsystem.c  UISubsystem.h
engine/src/Game/: Game.c  Game.h  GameData.c  GameData.h  GameLoader.c  GameLoader.h  GameWindow.c  GameWindow.h
engine/src/GameLoader/: GameLoader.c  GameLoader.h
engine/src/Hooks/: HookManager.c  HookManager.h  MenuHooks.c  MenuHooks.h
engine/src/Identity/: Identity.c  Identity.h
engine/src/Input/: InputBuffer.c  InputBuffer.h  InputBufferKeyboard.c  InputBufferKeyboard.h  KeyboardModifiers.h
engine/src/Integrations/: ImGuiBackend.c  RaylibCustomAllocFunctions.c
engine/src/JSON/: JSONUtils.c  JSONUtils.h
engine/src/Launcher/: LaunchParams.c  LaunchParams.h  Launcher.c
engine/src/Logging/: LogBackingBuffer.c  LogBackingBuffer.h  Logging.c  Logging.h
engine/src/LoggingSubsystem/: LoggingSubsystem.c
engine/src/MemPool/: MemPoolManager.c  MemPoolManager.h
engine/src/Modules/: CommandModule.c  CommandModule.h  FilesystemModule.c  FilesystemModule.h  InputHookModule.c  InputHookModule.h  InputModule.c  InputModule.h  MemPoolModule.c  MemPoolModule.h  ModuleManager.c  ModuleManager.h  Readme.md  RendererModule.c  RendererModule.h  SceneModule.c  SceneModule.h  UIModule.c  UIModule.h
engine/src/Non-Headless/EngineSubsystems/: RendererSubsystem.c  RendererSubsystem.h  UISubsystem.c  UISubsystem.h
engine/src/Non-Headless/Hooks/: MenuHooks.c  MenuHooks.h
engine/src/Non-Headless/Integrations/: ImGuiBackend.c  ImGuiBackend.h
engine/src/Non-Headless/Rendering/: Renderer.c  Renderer.h
engine/src/Non-Headless/UI/: DeveloperConsole.c  DeveloperConsole.h  ImGuiDemo.c  ImGuiDemo.h  ResourceViewer.c  ResourceViewer.h  SceneDebugUI.c  SceneDebugUI.h
engine/src/PixelWorld/: PixelWorld.c  PixelWorld.h
engine/src/Private/: Launcher.c
engine/src/Rendering/: NuklearCommandExecutor.c  NuklearCommandExecutor.h  RenderableAPI.c  RenderableAPI.h  RenderablePrimitives.c  Renderer.c  Renderer.h  TextureResources.c  TextureResources.h
engine/src/ResourceManagement/: ResourceHandleUtils.c  ResourceHandleUtils.h
engine/src/Resources/: PixelWorldResources.c  PixelWorldResources.h  RenderablePrimitives.c  RenderablePrimitives.h  ResourceDomains.h  ResourceHandleUtils.c  ResourceHandleUtils.h  ResourceList.c  ResourceList.h  ResourceListUtils.c  ResourceListUtils.h  ResourcesAPI.c  ResourcesAPI.h  TextureResources.c  TextureResources.h
engine/src/Scene/: Component.c  Component.h  Entity.c  Entity.h  Scene.c  Scene.h  SceneAPI.c  SceneAPI.h
engine/src/Subsystems/: CommandSubsystem.c  CommandSubsystem.h  FileSubsystem.c  FileSubsystem.h  InputHookSubsystem.c  InputHookSubsystem.h  InputSubsystem.c  InputSubsystem.h  LoggingSubsystem.c  LoggingSubsystem.h  MemPoolSubsystem.c  MemPoolSubsystem.h  RendererSubsystem.c  RendererSubsystem.h  SubsystemManager.c  SubsystemManager.h  UISubsystem.c  UISubsystem.h
engine/src/Testing/: AngleTests.c  AngleTests.h  Testing.c  Testing.h
engine/src/UI/: DeveloperConsole.c  DeveloperConsole.h  ImGuiDemo.c  ImGuiDemo.h  ResourceViewer.c  ResourceViewer.h  SceneDebugUI.c  SceneDebugUI.h  TestUI.c  TestUI.h  UIHelpers.h
engine/src/UTUtils/: UTHash_Pooled.h
engine/src/Utils/: StringUtils.c  StringUtils.h
gamelib_sanitytest/: CMakeLists.txt  game.json  pixelworld.json
gamelib_sanitytest/include/GameLib_SanityTest/: LibExport.h  LibInterface.h
gamelib_sanitytest/src/: Impl.c  LibInterface.c  SanityTest.c
launcher/: CMakeLists.txt  launch.sh
launcher/src/: Main.c
pch/: LeakCheckDefs.h  RaylibAllocators.h
platform/: CMakeLists.txt
platform/include/Platform/: FileSystem.h  FileSystemNative.h  Library.h  String.h
platform/src/Common/: FileSystemCommon.c  FileSystemCommon.h  StringCommon.c
platform/src/Linux/: FileSystem.c
platform/src/Unix/: FileSystem.c  Library.c
platform/src/Windows/: FileSystem.c
sanity/: CMakeLists.txt  main.c
scripts/: filetoheader.py
tests/: CMakeLists.txt
tests/engine/: Angles.cpp  CMakeLists.txt  Main.cpp
